# tclMaster

./: LICENSE  README.md  pyproject.toml
examples/: comment_out_block.ipynb  replace_line.ipynb
src/tclMaster/: __init__.py
src/tclMaster/core/: __init__.py  core.py
src/tclMaster/utilities/: TclPreprocessor.py  __init__.py  batch_comment_out_block.py  batch_replace.py  utilities.py
