[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tclMaster"
version = "0.1.0"
description = "An OOP Python wrapper for managing and modifying OpenSees/STKO Tcl input files."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add external libraries here if you use them later, e.g.:
    # "numpy",
    # "h5py",
]

[project.urls]
"Homepage" = "https://github.com/nmorabowen/tclMaster"